[package]
name = "collatz-core"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
hyle_contract = { git = "https://github.com/hyle-org/hyle-risc-zero-verifier.git", branch = "feat/nostd" }
