[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
hyle_contract = { git = "https://github.com/hyle-org/verifiers-for-hyle.git", branch = "main" }
methods = { path = "../methods" }
risc0-zkvm = { version = "0.21" }
env_logger = "0.10"
serde = "1.0"
serde_json = "1.0.111"
clap = { version = "4.4.17", features = ["derive"] }
base64 = "0.22.1"