[package]
name = "method"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
#hyle_contract = { git = "https://github.com/hyle-org/hyle-risc-zero-verifier.git", branch = "main" }
hyle_contract = { path = "../../../hyle-risc-zero-verifier/hyle-contract" }
risc0-zkvm = { version = "0.21.0", default-features = false }
